# servant-todo

./: Makefile  README.md  package.yaml  servant-todo.cabal  stack.yaml
app/: Main.hs
src/: Api.hs  App.hs  Config.hs  Core.hs
src/DB/: Todo.hs  User.hs
src/Type/: Error.hs  Todo.hs  UUID.hs  User.hs
src/Web/: Todo.hs  User.hs
test/: Spec.hs
