cabal-version: 1.12
name:           servant-todo
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/servant-todo#readme>
homepage:       https://github.com/githubuser/servant-todo#readme
bug-reports:    https://github.com/githubuser/servant-todo/issues
author:         Joona Piirainen
maintainer:     joona.piirianen@gmail.com
copyright:      2021 Joona Piirainen
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/japiirainen/servant-todo

library
  exposed-modules:
      Lib
      Type.Error
      Type.Todo
      Type.UUID
  other-modules:
      Paths_servant_todo
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.7 && <5
    , wai
    , warp
    , bytestring
    , envy
    , stm
    , transformers
    , servant
    , either
    , jwt
    , random
    , mtl
    , servant-server
    , servant-client
    , servant-docs
    , QuickCheck
    , quickcheck-instances
    , text
    , time
    , uuid
    , http-types
    , unordered-containers
    , hashable
  default-language: Haskell2010

executable web
  main-is: Main.hs
  other-modules:
      Paths_servant_todo
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , wai
    , warp
    , bytestring
    , envy
    , stm
    , transformers
    , servant
    , either
    , jwt
    , random
    , mtl
    , servant-todo
    , servant-server
    , servant-docs
    , QuickCheck
    , quickcheck-instances
    , text
    , time
    , uuid
    , http-types
    , unordered-containers
    , hashable
  default-language: Haskell2010

test-suite servant-todo-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_servant_todo
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , hspec
    , hspec-wai
    , hspec-wai-json
    , servant-server
    , servant-todo
    , wai
    , warp
  default-language: Haskell2010
